Incompatible changes in svn version:

  * Routine h_psiq deleted

Fixed in svn versions

  * CPV: stress with nonlocal DFT incorrect in parallel (rev.13102)
  * PWGui: double-hyphen glitch with old tcllib for NEB (rev. 13101)
  * GWW wasn't working at all (rev. 13099, 13100, and 13106)
  * PW: ACE energy slightly off, leading to crash, for metals (commit 13095)
    and for USPP (commit 13111)
  * Some Wyckoff site labels were incorrect (commit 13083)
    Also: symmetry analysis improved (commit 13094)

New in 6.0 version:

  * Socket interface with i-PI universal force engine (ipi-code.org)
  * New I/O: XML data file according to the XML Schema, initial implementation
    of HDF5 binary files (experimental, activate with -D__XSD and -D__HDF5)
  * Non-collinear magnetism implemented in epsilon.x, code restructuring
    (Tae-Yun Kim, Andrea Ferretti, Cheol-Hwan Park)
  * Lin Lin's ACE (Adaptively Compressed Exchange) for hybrid functionals
    (experimental, activate with -D__EXX_ACE) (Ivan Carnimeo)
  * Improved real-space treatment of Q and beta functions with Fourier
    filtering (Stefano de Gironcoli)
  * Support for new, improved Goedecker-Hutter-Teter pseudopotentials
    generated by Santana Saha (Sebastiano Caravati)
  * EPW: Automatic documentation using Ford
  * EPW: Restart after epmatwp1 is written with arbitrary number of cores
  * EPW: Electron and Phonon bandstructure can now be computed using band_plot
         with etf_mem true or false.
  * EPW: The test-farm now checks 5 representative examples and the associated
         accuracy
  * Netlib LAPACK updated, easy to update going forward
  * Added support to modern ELPA (2016.05 and 2015.11)
  * Added emacs modes for editing QE input, in GUI/QE-modes (Tone Kokalj)

Fixed in 6.0 version:

  * TDDFPT, PWCOND, GWW: redirection to /dev/null broke Windows executable
    (commit 12357)
  * PDOS in the noncolinear case was broken by recent changes in indexing 